--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -51,6 +51,7 @@ html {
 body {
   font-size: 0.9rem;
   font-family: "Figtree", segoe UI, sans-serif;
+  color: #1f1f1f;
 }
 a,
 a:visited {
@@ -618,17 +619,27 @@ span {
 }
 
 .hero-bg {
-  height: 30rem;
+  height: 43rem;
   width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw 31rem;
+  background-size: 100vw 44rem;
+  background-position: 0 9rem;
+  transition: 0.3s ease-out;
+  @media (max-width: 1250px) {
+    height: 35rem;
+    background-size: 100vw 31rem;
+    background-position: 0 9rem;
+  }
+}
+.has-scrolled .hero-bg {
+  height: 30rem;
   background-position: 0 4rem;
 }
 .hero-content {
   position: relative;
   z-index: 2;
-  width: 100%;
+  width: fit-content;
   height: 100%;
 }
 .page-content {
