--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -619,16 +619,16 @@ span {
 }
 
 .hero-bg {
-  height: 43rem;
+  height: 45rem;
   width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw 44rem;
+  background-size: 100vw auto;
   background-position: 0 9rem;
   transition: 0.3s ease-out;
   @media (max-width: 1250px) {
     height: 35rem;
-    background-size: 100vw 31rem;
+    background-size: 100vw auto;
     background-position: 0 9rem;
   }
 }
