removed unused section

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -683,6 +683,7 @@ span {
     }
     .featured-title {
       font-size: 1.8rem;
+      font-weight: 400;
 
       @media (max-width: 600px) {
         text-align: center;
