--- a/components/occasion-card/OccasionCard.module.scss
+++ b/components/occasion-card/OccasionCard.module.scss
@@ -1,84 +1,160 @@
 .occasion-card {
-  width: 26vw;
-  height: 26vw;
-  position: relative;
-  overflow: hidden;
+  display: inline-block;
+  border: 0.1rem solid #f3f4f6;
+  background-color: white;
+  transition: 0.3s ease-out;
+
+  &.three-x-grid {
+    width: 30%;
+    .img-wrapper {
+      height: 17rem;
+      @media (max-width: 1350px) {
+        height: 14rem;
+      }
+      @media (max-width: 1050px) {
+        height: 13rem;
+      }
+      .flower-image {
+        width: 100%;
+        height: 17rem;
+        @media (max-width: 1350px) {
+          height: 14rem;
+        }
+        @media (max-width: 1050px) {
+          height: 13rem;
+        }
+      }
+    }
+  }
 
   @media (max-width: 650px) {
-    width: 30vw;
-    height: 30vw;
+    width: 40%;
   }
 
-  @media (max-width: 550px) {
-    width: 50vw;
-    height: 50vw;
-    min-width: 30rem;
-    min-height: 30rem;
+  .detail {
+    padding: 1rem;
+  }
+  .name {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+    height: 3.5rem;
+    font-size: 1.4rem;
+    text-align: center;
+    font-weight: 400;
+  }
+  .subtitle {
+    font-size: 1rem;
+    color: #6b7280;
+    margin-top: 0.5rem;
+    text-align: center;
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 3rem;
+    @media (max-width: 400px) {
+      border-bottom: 1px solid #eff0f6;
+    }
+  }
+  .buy-btn {
+    height: 2.5rem;
+    transition: width 1s ease;
+    font-size: 0.8rem;
+    overflow: hidden;
+    white-space: nowrap;
+
+    @media (min-width: 420px) {
+      width: 21%;
+      text-align: end;
+    }
+
+    @media (max-width: 420px) {
+      background-image: none;
+      color: white;
+      background-color: #b240da;
+      width: 100%;
+      margin-top: 0.5rem;
+    }
+  }
+  .buy-btn:hover {
+    @media (min-width: 420px) {
+      background-image: none;
+      background-color: #b240da;
+      color: white;
+      width: 35%;
+      text-align: center;
+    }
+  }
+  .buy-btn:hover > img {
+    display: none;
+  }
+  .buy-btn > img {
+    height: 3rem;
+    width: 3rem;
+  }
+  .buy-btn:hover > p {
+    display: inline;
+  }
+  .buy-btn > p {
+    display: none;
   }
 
-  @media (max-width: 400px) {
-    width: 80vw;
-    height: 80vw;
-    min-width: 20rem;
-    min-height: 20rem;
+  .gift-btn {
+    padding: 0.9rem;
+    min-width: 6rem;
+    font-weight: bold;
+    font-size: 0.9rem;
+    width: 100%;
+    margin-top: 1rem;
+    @media (max-width: 400px) {
+      margin-top: 0.5rem;
+    }
   }
 
-  .img {
-    position: absolute;
-    height: inherit;
-    width: inherit;
-    min-width: inherit;
-    min-height: inherit;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transition: 0.3s ease-out;
-  }
-  .content {
-    position: absolute;
-    height: inherit;
-    width: inherit;
-    min-width: inherit;
-    min-height: inherit;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background-color: rgba(0, 0, 0, 0.2);
+  .price-btn-wrapper {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    text-align: right;
-    color: white;
-    padding: 1.5rem;
-    transition: 0.3s ease-out;
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.6);
-      & ~ .img {
-        transform: scale(1.3);
-      }
-      .title {
-        transform: scale(1.03);
-      }
-      .explore {
-        margin-right: 0;
-      }
-    }
-    .title {
-      font-weight: bold;
-      font-size: 1.9rem;
-      margin-bottom: 0.6rem;
-      transition: 0.3s ease-out;
-
-      @media (max-width: 650px) {
-        font-size: 2rem;
-      }
+    margin-top: 0.5rem;
+    &.price {
+      justify-content: space-between;
+      font-size: 1.1rem;
     }
 
-    .explore {
-      margin-right: 0.3rem;
+    @media (max-width: 420px) {
+      .price-text {
+        margin-right: 3.5rem;
+      }
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .img-wrapper {
+    overflow: hidden;
+    height: fit-content;
+    .flower-image {
+      height: 17rem;
+      width: 100%;
+      @media (max-width: 1250px) {
+        height: 16rem;
+      }
+      @media (max-width: 1150px) {
+        height: 15rem;
+      }
+      @media (max-width: 1050px) {
+        height: 14rem;
+      }
+      object-fit: cover;
       transition: 0.3s ease-out;
-      font-size: 1.2rem;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
