--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -85,20 +85,18 @@
     padding: 0.6rem 1rem;
   }
   .name {
-    font-size: 1.1rem;
-
-    &.only-name {
-      font-size: 1.3rem;
-    }
-  }
-  .name {
     display: -webkit-box;
     line-clamp: 2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-transform: uppercase;
     height: 2.8rem;
+    font-size: 1.1rem;
+    &.only-name {
+      font-size: 1.3rem;
+    }
   }
   .subtitle {
     font-size: 0.9rem;
