--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -27,7 +27,7 @@
 .section {
   display: flex;
   justify-content: space-between;
-  margin: 1rem 0 6rem;
+  margin: 0 0 6rem;
 
   @media (max-width: 650px) {
     margin: 1rem 0 2rem;
@@ -115,6 +115,23 @@
   .button {
     width: 100%;
     padding: 0.8rem;
+  }
+}
+.quote-flex {
+  display: flex;
+  width: 100%;
+  .quote,
+  .quote-img {
+    width: 33%;
+  }
+  .quote {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 1rem;
+    background-color: #f1f1f1;
   }
 }
 .reviews {
