--- a/components/service-card/ServiceCard.module.scss
+++ b/components/service-card/ServiceCard.module.scss
@@ -1,11 +1,13 @@
 .service-card {
   width: 25vw;
-  height: fit-content;
-  padding: 1.5rem;
+  height: 27vw;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: white;
+  justify-content: space-between;
 
   @media (max-width: 650px) {
     width: 60vw;
@@ -17,40 +19,24 @@
     width: 80vw;
   }
 
-  &.default {
-    .img {
-      height: 9rem;
-
-      @media (max-width: 500px) {
-        height: 5rem;
-      }
-    }
-    .description {
-      text-align: center;
-    }
-    .title {
-      font-size: 1.1rem;
-      font-weight: 600;
-    }
-  }
-  &.small {
-    border-radius: 0.2rem;
-    background-color: #edededba;
-    font-size: smaller;
-    .img {
-      height: 3.5rem;
-    }
-    .title {
-      font-size: 1.1rem;
-      font-weight: 600;
-    }
-  }
   .img {
-    height: 4rem;
+    height: 6rem;
     margin-bottom: 1rem;
+
+    @media (max-width: 500px) {
+      height: 5rem;
+    }
+  }
+  .description {
+    text-align: center;
   }
   .title {
     font-size: 1.4rem;
-    margin-bottom: 0.6rem;
+    font-weight: 400;
+    text-transform: uppercase;
+  }
+  .subtitle {
+    font-size: 0.9rem;
+    margin: 1rem 0;
   }
 }
