--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -639,7 +639,7 @@ span {
 .hero-content {
   position: relative;
   z-index: 2;
-  width: fit-content;
+  width: 100%;
   height: 100%;
 }
 .page-content {
