--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -260,50 +260,26 @@
 }
 .full-width-section {
   display: flex;
-  height: 34rem;
-  &.summary {
-    @media (max-width: 650px) {
-      display: none;
-    }
-    .left {
-      background-color: #e0e0ec;
-      color: #202020;
-      align-items: flex-start;
-      width: 65%;
-      padding: 0 15%;
-      & > * {
-        margin: 1rem 0;
-      }
-    }
-    .right {
-      width: 35%;
-    }
-  }
-  @media (max-width: 650px) {
-    flex-direction: column;
-    height: auto;
-  }
+  margin-bottom: 4rem;
   .left {
-    width: 70%;
-    justify-content: center;
-    background-color: #53674b;
-    color: white;
+    width: 45%;
+    object-fit: cover;
+  }
+  .right {
+    width: 55%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background-color: #f1f1f1;
+    text-align: center;
     padding: 0 4rem;
-    position: relative;
-
-    @media (max-width: 650px) {
-      width: 100%;
-      padding: 2rem;
-    }
+    padding-bottom: 2rem;
   }
-  .right {
-    width: 30%;
-    height: auto;
-    object-fit: cover;
-    transition: 0.3s ease-out;
+  .subtitle {
+    font-size: 1.2rem;
+    margin: 0.5rem 0 2rem;
+    width: 80%;
   }
 }
 
