--- a/components/select/Select.module.scss
+++ b/components/select/Select.module.scss
@@ -24,7 +24,7 @@ $placeholder: rgba(0, 0, 0, 0.6);
     padding: 0 0.3rem;
   }
   &.light {
-    border: 0.1rem solid #1F1F1F;
+    border: 0.1rem solid #e5e7eb;
     background-color: white;
   }
   &.dimmed {
