--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -43,6 +43,12 @@
             color: #1F1F1F;
           }
       }
+      .hero-text > ul{
+        background: linear-gradient(to right, #F3F3F3 100%, #E3D7D7 0%);
+        padding: 0.5rem;
+        border: 0.1rem solid #FAFAFA;
+        border-radius: 0.4rem;
+      }
       .occasions-mobile {
         background-image: url("/images/Rectangle-3040-mobile.png");
         height: 20rem;
@@ -69,6 +75,12 @@
             width:10rem;
             border-bottom: 0.1rem solid ;
           }
+        }
+        .mobile-card > ul{
+          background: linear-gradient(to right, #F3F3F3 100%, #E3D7D7 0%);
+          padding: 0.5rem;
+          border-radius: 0.4rem;
+          border: 0.1rem solid #FAFAFA;
         }
       }
     
