--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "Gotham";
+  src: url("../public/fonts/Gotham-Light.otf") format("otf");
+  font-display: swap;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Gotham";
+  src: url("../public/fonts/Gotham-Bold.otf") format("otf");
+  font-display: swap;
+  font-weight: bold;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 85%;
@@ -50,7 +64,7 @@ html {
 
 body {
   font-size: 0.9rem;
-  font-family: "Figtree", segoe UI, sans-serif;
+  font-family: "Gotham", segoe UI, sans-serif;
   color: #1f1f1f;
 }
 a,
