--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -428,9 +428,8 @@
 .flower-input-wrapper {
   position: relative;
   display: flex;
-  height: 4rem;
-  padding: 0.15rem;
-  border-radius: 0.3rem;
+  height: 5rem;
+  padding: 0.5rem;
   background-color: white;
   align-items: center;
   margin-top: 1rem;
@@ -452,14 +451,19 @@
     border: none;
     padding: 0 0.4rem;
     width: 18rem;
-
+    @media (max-width: 1300px) {
+      width: 16rem;
+    }
     @media (max-width: 500px) {
       width: 49%;
     }
   }
   .delivery-date {
     border: none;
-
+    width: 14rem;
+    @media (max-width: 1300px) {
+      width: 12rem;
+    }
     @media (max-width: 500px) {
       width: 49%;
     }
@@ -467,7 +471,13 @@
   .input-submit {
     align-self: stretch;
     align-items: center;
-
+    width: 16rem;
+    border-radius: 0;
+    text-transform: uppercase;
+    font-weight: 500;
+    @media (max-width: 1300px) {
+      width: 14rem;
+    }
     @media (max-width: 650px) {
       margin-top: 0.5rem;
     }
