--- a/components/instagram-feed/InstagramFeed.module.scss
+++ b/components/instagram-feed/InstagramFeed.module.scss
@@ -12,12 +12,18 @@
       transition: 0.3s ease-out;
       position: relative;
       &:hover {
-        background-color: rgba(128, 128, 128, 0.181);
+        .post-img {
+          filter: blur(0.2rem);
+        }
+        .post-author {
+          opacity: 1;
+        }
       }
       .post-img {
         object-fit: cover;
         width: 100%;
         height: 100%;
+        transition: 0.3s ease-out;
       }
       .post-author {
         position: absolute;
@@ -27,6 +33,8 @@
         font-weight: 500;
         background-color: rgba(255, 255, 255, 0.755);
         border-radius: 0 0.5rem 0 0;
+        transition: 0.3s ease-out;
+        opacity: 0.5;
       }
     }
   }
