--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -519,7 +519,7 @@
     align-items: center;
     .story {
       display: flex;
-      max-height: 30rem;
+      max-height: 80rem;
       overflow: hidden;
       transition: 0.3s ease-out;
       &.minimized {
@@ -531,6 +531,7 @@
       .story-topic {
         font-weight: 400;
         font-size: 1.8rem;
+        text-transform: uppercase;
       }
       .para {
         font-size: 1rem;
