--- a/pages/404.module.scss
+++ b/pages/404.module.scss
@@ -1,64 +1,63 @@
-.not-found{
+.not-found {
   height: 30rem;
   width: auto;
   margin: 0 auto 2rem auto;
   background-size: cover;
   background-position: left bottom;
   background-image: url("/images/404.png");
-  .text{
+  .text {
     position: absolute;
     left: 8rem;
     top: 12rem;
     max-width: 300px;
     z-index: 1;
-    p:first-of-type{
-        font-size: 5rem;
-        font-weight: 800;
-    }
-    p:nth-child(2){
+    p:first-of-type {
+      font-size: 5rem;
       font-weight: 800;
-        }
-    p:nth-child(2), p:nth-child(3){
-     margin: 15px 0;
     }
-    button{
+    p:nth-child(2) {
+      font-weight: 800;
+    }
+    p:nth-child(2),
+    p:nth-child(3) {
+      margin: 15px 0;
+    }
+    button {
       background-color: #b240da;
       padding: 10px;
       width: 80%;
-      color: #FFFFFF;
+      color: #ffffff;
     }
   }
 
-  @media (max-width: 650px) {
-    background-position: 25% 75% ;
+  @media (max-width: 768px) {
+    background-position: 25% 75%;
     height: 35rem;
     background-image: url("/images/404-mobile.png");
-    .text{
+    .text {
       width: 100%;
-      top:22rem;
-      left:2rem;
-        p:first-of-type {
-            font-size: 3rem;
-            font-weight: 800;
-          }
-        
-          p:nth-child(2),
-          p:nth-child(3) {
-            margin: 10px 0;
-          }
-          button {
-            width: 60%;
-          
-          }
+      top: 22rem;
+      left: 2rem;
+      p:first-of-type {
+        font-size: 3rem;
+        font-weight: 800;
+      }
+
+      p:nth-child(2),
+      p:nth-child(3) {
+        margin: 10px 0;
+      }
+      button {
+        width: 60%;
+      }
     }
   }
-
 }
 
 .popular-sections {
   padding: 0 7rem;
 
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     padding: 0 2rem;
   }
 
@@ -82,12 +81,12 @@
   justify-content: space-between;
   margin: 1rem 0 6rem;
 
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     margin: 1rem 0 2rem;
   }
 
   &.wrap {
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       flex-wrap: wrap;
       gap: 1rem;
       justify-content: center;
