--- a/pages/cart.module.scss
+++ b/pages/cart.module.scss
@@ -3,7 +3,7 @@
 
   .cartitems {
     width: 50%;
-    border: 0.1rem solid #9CA3AF;
+    border: 0.1rem solid #9ca3af;
     border-radius: 0.4rem;
     margin-bottom: 2rem;
     position: relative;
@@ -11,10 +11,9 @@
     .item {
       height: auto;
       padding: 1rem;
-
     }
 
-    .item>img {
+    .item > img {
       height: auto;
       width: 10rem;
       object-fit: cover;
@@ -22,7 +21,7 @@
       border-radius: 0.4rem;
     }
 
-    .item>div {
+    .item > div {
       margin-left: 2rem;
     }
 
@@ -31,37 +30,37 @@
 
       //plus sign
       .plus {
-          position: relative;
-          width: 1.7rem;
-          height: 1.7rem;
-          background: #B240DA;
-          cursor: pointer;
-          border-radius: 0.3rem;
-      
-          &::before,
-          &::after {
-            content: "";
-            position: absolute;
-            background: #fff;
-          }
-      
-          &::before {
-            left: 50%;
-            top: 7px;
-            /* this defines how much black "border" there should be */
-            bottom: 7px;
-            width: 0.15rem;
-            transform: translateX(-50%);
-          }
-      
-          &::after {
-            top: 50%;
-            left: 7px;
-            right: 7px;
-            height: 0.15rem;
-            transform: translateY(-50%);
-          }
+        position: relative;
+        width: 1.7rem;
+        height: 1.7rem;
+        background: #b240da;
+        cursor: pointer;
+        border-radius: 0.3rem;
+
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          background: #fff;
         }
+
+        &::before {
+          left: 50%;
+          top: 7px;
+          /* this defines how much black "border" there should be */
+          bottom: 7px;
+          width: 0.15rem;
+          transform: translateX(-50%);
+        }
+
+        &::after {
+          top: 50%;
+          left: 7px;
+          right: 7px;
+          height: 0.15rem;
+          transform: translateY(-50%);
+        }
+      }
 
       //minus sign
       .minus {
@@ -69,14 +68,14 @@
         width: 1.7rem;
         height: 1.7rem;
         background: white;
-        border: 0.1rem solid #B240DA;
+        border: 0.1rem solid #b240da;
         cursor: pointer;
         border-radius: 0.3rem;
 
         &::after {
           content: "";
           position: absolute;
-          background: #B240DA;
+          background: #b240da;
           top: 50%;
           left: 7px;
           right: 7px;
@@ -85,31 +84,30 @@
         }
       }
 
-      .btns>p {
-        color: #DA4065;
-        border-bottom: 0.1rem solid #DA4065;
+      .btns > p {
+        color: #da4065;
+        border-bottom: 0.1rem solid #da4065;
         cursor: pointer;
-
       }
 
-      .btns>button>label {
+      .btns > button > label {
         border-bottom: 0.1rem solid #202020;
       }
 
-      .btns>button>.hide {
-        border-bottom: 0.1rem solid #B240DA;
+      .btns > button > .hide {
+        border-bottom: 0.1rem solid #b240da;
       }
 
       @media (max-width: 420px) {
-        &>*{
-         margin: 1rem 0;
+        & > * {
+          margin: 1rem 0;
         }
       }
     }
-    .itemcard>p{
-      margin-bottom: .8rem;
+    .itemcard > p {
+      margin-bottom: 0.8rem;
     }
-    .itemcard>.btns{
+    .itemcard > .btns {
       margin-top: 3.5rem;
     }
     input {
@@ -118,43 +116,42 @@
 
     .details {
       width: 100%;
-      border-top: 0.1rem solid #9CA3AF;
+      border-top: 0.1rem solid #9ca3af;
       height: 0;
       overflow: hidden;
       z-index: -1;
       opacity: 0;
-      -webkit-transition: .7s ease;
-      -moz-transition: .7s ease;
-      -o-transition: .7s ease;
-      transition: .7s ease;
-      padding: 0 .7rem;
-
+      -webkit-transition: 0.7s ease;
+      -moz-transition: 0.7s ease;
+      -o-transition: 0.7s ease;
+      transition: 0.7s ease;
+      padding: 0 0.7rem;
     }
 
-    .details>div {
+    .details > div {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 0.2rem 0;
     }
 
-    .details>div>p:nth-child(2) {
+    .details > div > p:nth-child(2) {
       width: 50%;
     }
 
-    .details>div:first-of-type>p {
+    .details > div:first-of-type > p {
       width: auto;
     }
 
-    .details>div:nth-child(2)>p:nth-child(2) {
-      margin-left: -.8rem;
+    .details > div:nth-child(2) > p:nth-child(2) {
+      margin-left: -0.8rem;
 
       @media (max-width: 420px) {
         margin-left: auto;
       }
     }
 
-    .details>div:nth-child(4)>p:nth-child(2) {
+    .details > div:nth-child(4) > p:nth-child(2) {
       margin-left: -5rem;
 
       @media (max-width: 420px) {
@@ -162,7 +159,7 @@
       }
     }
 
-    input[type=checkbox]:checked+div {
+    input[type="checkbox"]:checked + div {
       display: block;
       height: auto;
       opacity: 1;
@@ -171,12 +168,12 @@
       padding-bottom: 1rem;
     }
 
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       width: 100%;
     }
 
     @media (max-width: 420px) {
-      .item>div>img {
+      .item > div > img {
         height: auto;
         width: 8rem;
         object-fit: cover;
@@ -190,32 +187,25 @@
         padding: 0.5rem 1rem;
 
         p:first-of-type {
-          color: #DA4065;
-          border-bottom: 0.1rem solid #DA4065;
+          color: #da4065;
+          border-bottom: 0.1rem solid #da4065;
           cursor: pointer;
-
         }
 
-        button>label {
+        button > label {
           border-bottom: 0.1rem solid #202020;
         }
 
-        button>.hide {
-          border-bottom: 0.1rem solid #B240DA;
+        button > .hide {
+          border-bottom: 0.1rem solid #b240da;
         }
       }
     }
   }
 
-
-
-
-
-
-
   .summary {
     width: 40%;
-    border: 0.1rem solid #9CA3AF;
+    border: 0.1rem solid #9ca3af;
     padding: 1rem;
     position: fixed;
     top: 15.8rem;
@@ -228,26 +218,26 @@
       }
     }
 
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       position: static;
       width: auto;
       margin-bottom: 3rem;
     }
   }
 
-  .empty{
-  width:25%;
-  margin: 0 auto;
+  .empty {
+    width: 25%;
+    margin: 0 auto;
 
-  &>*{
-    margin-top: 2.5rem;
-  }
-  @media (max-width: 500px) {
-      width:60%;
-  }
+    & > * {
+      margin-top: 2.5rem;
+    }
+    @media (max-width: 500px) {
+      width: 60%;
+    }
   }
 
-  .summary>* {
+  .summary > * {
     margin: 1rem 0;
   }
 
