--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  z-index: 9;
+  z-index: 102;
   background-color: #fbf6fd;
   box-shadow: 0 0.2rem 0.5rem 0.2rem rgba(0, 0, 0, 0.1);
   font-weight: 500;
@@ -15,6 +15,18 @@
     display: flex;
     transition: 0.3s ease-out;
     position: relative;
+    @media (max-width: 768px) {
+      margin-left: -7rem;
+    }
+    .logo {
+      height: auto;
+      width: 15rem;
+      position: relative;
+      z-index: 14;
+      @media (max-width: 768px) {
+        width: 13rem;
+      }
+    }
     &.minimize {
       .packaged {
         max-width: 0;
@@ -55,6 +67,9 @@
       padding: 1.5rem;
       transition: 0.3s ease-out;
       box-shadow: 0 0.2rem 0.8rem -0.2rem rgba(0, 0, 0, 0.1);
+      @media (max-width: 768px) {
+        display: none;
+      }
       .link {
         position: relative;
         .title {
@@ -177,12 +192,6 @@
       display: block;
     }
   }
-  .logo {
-    height: auto;
-    width: 15rem;
-    position: relative;
-    z-index: 14;
-  }
 
   .search-dropdown {
     font-weight: normal;
@@ -252,21 +261,31 @@
     top: 5rem;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 5rem);
     background-color: white;
-    z-index: 10;
+    z-index: 101;
     padding: 2rem 3rem;
     transition: all 0.3s ease-in-out;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &.active {
       opacity: 1;
       visibility: visible;
     }
 
-    @media (min-width: 650px) {
+    @media (min-width: 768px) {
       display: none;
     }
 
+    .title {
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.3rem 0;
+      position: relative;
+    }
     .arrow {
       border-top: 0.2rem solid rgba(0, 0, 0, 0.502);
       width: 1rem;
@@ -275,120 +294,58 @@
       transform: rotate(140deg);
       margin-left: auto;
       transition: 0.4s ease-out;
-    }
-
-    .title {
-      font-size: 1.5rem;
-      font-weight: 600;
-      border-bottom: 0.1rem solid #d6d6d6;
-      padding: 1.3rem 0;
+      &.active {
+        transform: rotate(230deg);
+      }
     }
 
     .sub-link {
-      opacity: 0;
-      visibility: hidden;
-      position: fixed;
-      top: 6rem;
-      left: 0;
-      width: 100vw;
-      height: 90vh;
+      max-height: 0;
+      padding: 0 1rem;
+      width: 100%;
       background-color: white;
-      z-index: 10;
-      padding: 2rem 3rem;
       transition: all 0.3s ease-in-out;
-
-      .sub-child {
-        opacity: 0;
-        visibility: hidden;
-        position: fixed;
-        top: 6rem;
-        left: 0;
-        width: 100vw;
-        height: 90vh;
-        background-color: white;
-        z-index: 10;
-        padding: 2rem 3rem;
-        transition: all 0.3s ease-in-out;
-
-        &.active {
-          opacity: 1;
-          visibility: visible;
-        }
-      }
-
+      overflow: hidden;
       &.sub-sub-link {
         z-index: 11;
       }
-
       &.active {
-        opacity: 1;
-        visibility: visible;
+        padding: 1rem;
+        max-height: 80rem;
+        .sub-link-title {
+          padding: 0.5rem;
+        }
       }
-
-      .back {
-        display: flex;
-        align-items: center;
-        font-size: 1.2rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-
-        .back-arrow {
-          border-top: 0.2rem solid #4b5563;
-          width: 0.8rem;
-          border-left: 0.2rem solid #4b5563;
-          height: 0.8rem;
-          transform: rotate(320deg);
-          transition: 0.4s ease-out;
-          margin-right: 0.8rem;
+      .sub-child {
+        max-height: 0;
+        padding: 0 1rem;
+        width: 100%;
+        background-color: white;
+        transition: all 0.3s ease-in-out;
+        overflow: hidden;
+        &.active {
+          padding: 1rem;
+          max-height: 80rem;
+          .sub-link-title {
+            padding: 0.5rem;
+          }
         }
       }
 
       .sub-link-title {
         font-size: 1.2rem;
         display: flex;
-        padding: 1rem 0;
-        font-weight: 600;
+        padding: 0 0.5rem;
         align-items: center;
+        transition: 0.3s ease-out;
       }
     }
-  }
-
-  .controls-area-mobile {
-    display: none;
-
-    .control-icon {
-      height: 1.8rem;
-      width: auto;
-
-      &.initial {
-        background-color: #f5e5e5;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-transform: uppercase;
-        height: 1.6rem;
-        width: 1.6rem;
-        // margin: 0.6rem 0 0.1rem;
-        font-weight: bold;
-        color: #b240da;
-        border-radius: 50%;
-        font-size: 1.1rem;
-      }
-    }
-
-    @media (max-width: 768px) {
+    .mobile-user-area {
       display: flex;
       justify-content: center;
-      align-items: center;
-    }
-
-    .auth-wrapper {
-      @media (max-width: 768px) {
-        right: -4rem;
-        margin-top: -0.8rem;
-      }
     }
   }
+
   .controls-area {
     display: flex;
     flex-direction: column;
@@ -413,6 +370,9 @@
       position: relative;
       .control-icon {
         height: 1.8rem;
+        @media (max-width: 768px) {
+          height: 2.2rem;
+        }
       }
       .items-count {
         position: absolute;
@@ -432,6 +392,9 @@
     .control-icon {
       height: 1.5rem;
       width: auto;
+      @media (max-width: 768px) {
+        height: 1.8rem;
+      }
       &.initial {
         background-color: #f5e5e5;
         display: flex;
@@ -449,7 +412,6 @@
     }
 
     @media (max-width: 768px) {
-      display: none;
     }
   }
 
@@ -1098,10 +1060,6 @@
     opacity: 0;
     transition: 0.4s ease-out;
     margin-top: -1rem;
-
-    @media (max-width: 768px) {
-      right: 5rem;
-    }
 
     &.active {
       top: 6rem;
