--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,7 @@
   src: url("../public/fonts/Gotham-Light.otf") format("otf");
   font-display: swap;
   font-weight: normal;
+  font-stretch: 50% 200%;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("../public/fonts/Gotham-Bold.otf") format("otf");
   font-display: swap;
   font-weight: bold;
+  font-stretch: 50% 200%;
 }
 
 html {
@@ -28,13 +30,13 @@ html {
     font-size: 58%;
   }
   @media (max-width: 768px) {
-    font-size: 80%;
+    font-size: 85%;
   }
   @media (max-width: 400px) {
-    font-size: 75%;
+    font-size: 80%;
   }
   @media (max-width: 350px) {
-    font-size: 60%;
+    font-size: 70%;
   }
 
   @media (min-width: 1500px) {
@@ -66,6 +68,9 @@ body {
   font-size: 0.9rem;
   font-family: "Gotham", segoe UI, sans-serif;
   color: #1f1f1f;
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+  }
 }
 a,
 a:visited {
@@ -120,6 +125,11 @@ span {
 }
 .flex {
   display: flex;
+  &.responsive {
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
   &.column {
     flex-direction: column;
     &.spaced > * {
@@ -643,7 +653,6 @@ span {
   @media (max-width: 1250px) {
     height: 35rem;
     background-size: 100vw auto;
-    background-position: 0 9rem;
   }
 }
 .has-scrolled .hero-bg {
@@ -658,18 +667,14 @@ span {
 }
 .page-content {
   .featured-section-wrapper {
-    // position: relative;
-    // background-image: url(/images/pattern-bg.png);
-    // background-repeat: no-repeat;
-    // background-position: right;
-    // background-attachment: fixed;
-    // background-size: 23rem;
     background-color: #cdcdcd;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     min-height: 375rem;
     padding-top: 0.01rem;
-
+    @media (max-width: 768px) {
+      padding-top: 3rem;
+    }
     &:before {
       content: "";
       position: absolute;
@@ -684,8 +689,8 @@ span {
     .featured-content {
       padding: 4rem 7rem;
 
-      @media (max-width: 600px) {
-        padding: 3rem 2rem;
+      @media (max-width: 768px) {
+        padding: 4rem 2rem;
       }
 
       @media (max-width: 400px) {
@@ -700,7 +705,7 @@ span {
       &.unspaced {
         margin-bottom: 0;
       }
-      @media (max-width: 600px) {
+      @media (max-width: 768px) {
         text-align: center;
         margin: 1rem auto;
       }
@@ -708,7 +713,7 @@ span {
 
     .featured-title-small {
       font-size: 1.5rem;
-      @media (max-width: 600px) {
+      @media (max-width: 768px) {
         font-size: 1.1rem;
         text-align: center;
         margin: 0 auto;
@@ -725,7 +730,7 @@ span {
   width: 80%;
   margin: 0 auto;
 
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     width: 90%;
   }
 }
