--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -37,6 +37,9 @@
     min-width: 12rem;
     .detail {
       padding: 1.2rem;
+      @media (max-width: 768px) {
+        padding: 0.6rem;
+      }
     }
     .name {
       font-size: 1.1rem;
@@ -44,9 +47,6 @@
       -webkit-box-orient: vertical;
       text-overflow: ellipsis;
       height: 1.5rem;
-    }
-    .subtitle {
-      font-size: 0.9rem;
     }
     .gift-btn {
       padding: 0.5rem;
@@ -104,7 +104,7 @@
   }
 
   @media (max-width: 768px) {
-    width: 40%;
+    width: 48%;
   }
 
   .detail {
@@ -135,8 +135,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     height: 2.5rem;
-    @media (max-width: 400px) {
-      border-bottom: 1px solid #eff0f6;
+    @media (max-width: 768px) {
+      border-bottom: 0.1rem solid #eff0f6;
+      font-size: 1rem;
+      height: 2.7rem;
     }
   }
   .buy-btn {
@@ -206,12 +208,8 @@
       font-size: 1.1rem;
     }
 
-    @media (max-width: 420px) {
-      .price-text {
-        margin-right: 3.5rem;
-      }
+    @media (max-width: 768px) {
       flex-direction: column;
-      align-items: center;
       justify-content: center;
     }
   }
