--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,8 +2,6 @@
   font-family: "Gotham";
   src: url("../public/fonts/Gotham-Light.otf") format("otf");
   font-display: swap;
-  font-weight: normal;
-  font-stretch: 50% 200%;
 }
 
 @font-face {
@@ -11,7 +9,6 @@
   src: url("../public/fonts/Gotham-Bold.otf") format("otf");
   font-display: swap;
   font-weight: bold;
-  font-stretch: 50% 200%;
 }
 
 html {
@@ -667,30 +664,19 @@ span {
 }
 .page-content {
   .featured-section-wrapper {
-    background-color: #cdcdcd;
+    background-color: #f9f9f9;
     position: relative;
     z-index: 2;
-    min-height: 375rem;
     padding-top: 0.01rem;
     @media (max-width: 768px) {
-      padding-top: 2rem;
-    }
-    &:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      background-color: rgba(255, 255, 255, 0.8);
-      width: 100%;
-      height: 100%;
-      z-index: -2;
+      padding-top: 6rem;
     }
 
     .featured-content {
       padding: 4rem 7rem;
-
+      background-color: #f9f9f9;
       @media (max-width: 768px) {
-        padding: 4rem 2rem;
+        padding: 1rem;
       }
 
       @media (max-width: 400px) {
